[tool.poetry]
name = "vk_skan"
version = "0.1.0"
description = ""
authors = ["Ваше Имя <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"
httpx = "^0.23.0"
SQLAlchemy = "^1.4.34"
mg-file = "^0.1.24"
aiosqlite = "^0.17.0"
fake-useragent = "^0.1.11"
selenium-wire = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
